fix broken css

--- a/assets/sass/_wc_lost_password.scss
+++ b/assets/sass/_wc_lost_password.scss
@@ -1,4 +1,5 @@
-body.woocommerce-lost-password {
+body.woocommerce-lost-password, 
+body.woocommerce-lost-password.logged-in {
     .woocommerce {
         display: block;
     }
