--- a/style.css
+++ b/style.css
@@ -1423,22 +1423,28 @@ body.woocommerce-view-order .woocommerce table.shop_table {
   border-spacing: 0;
 }
 
-body.woocommerce-lost-password .woocommerce {
+body.woocommerce-lost-password .woocommerce,
+body.woocommerce-lost-password.logged-in .woocommerce {
   display: block;
 }
 body.woocommerce-lost-password .woocommerce > p,
-body.woocommerce-lost-password form.woocommerce-ResetPassword {
+body.woocommerce-lost-password form.woocommerce-ResetPassword,
+body.woocommerce-lost-password.logged-in .woocommerce > p,
+body.woocommerce-lost-password.logged-in form.woocommerce-ResetPassword {
   max-width: 600px;
 }
-body.woocommerce-lost-password .woocommerce > p {
+body.woocommerce-lost-password .woocommerce > p,
+body.woocommerce-lost-password.logged-in .woocommerce > p {
   color: var(--gray-6);
   line-height: 22.4px;
 }
-body.woocommerce-lost-password form.woocommerce-ResetPassword p {
+body.woocommerce-lost-password form.woocommerce-ResetPassword p,
+body.woocommerce-lost-password.logged-in form.woocommerce-ResetPassword p {
   font-size: 16px;
   line-height: 22.4px;
 }
-body.woocommerce-lost-password form.woocommerce-ResetPassword .form-row {
+body.woocommerce-lost-password form.woocommerce-ResetPassword .form-row,
+body.woocommerce-lost-password.logged-in form.woocommerce-ResetPassword .form-row {
   margin-top: 16px;
   width: 100%;
 }
